--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "homepage": "https://github.com/Rhadamel/space#readme",
   "dependencies": {
-    "lit-element": "^2.1.0"
+    "lit-element": "^2.1.0",
+    "node": "^12.3.1"
   },
   "scripts": {
     "build": "webpack",
